--- a/pages/quartet_repertoire.html
+++ b/pages/quartet_repertoire.html
@@ -274,8 +274,6 @@ Licence URI: https://www.os-templates.com/template-terms
               Famous Quartets<br>
               Concerto Polon in G Dur<br>
               Wedding day at Troldhaugen<br>
-              Hungarian Dance N 13<br>
-              Tango Trocadero<br>
             </p>
           </div>
         </div>
@@ -319,7 +317,7 @@ Licence URI: https://www.os-templates.com/template-terms
               PETER GABRIEL<br>
               PETER GABRIEL<br>
               TAYLOR SWIFT<br>
-              The Verve<br>
+              THE VERVE<br>
               TURTLES<br>
               U2<br>
               QUEEN<br>
@@ -336,7 +334,6 @@ Licence URI: https://www.os-templates.com/template-terms
               RADIOHEAD<br>
               SEAL<br>
               SIGUR ROS<br>
-              G. GERSHWIN<br>
               HANRY MANCINI<br>
               ANDREW WEBER<br>
               BILL HITHERS<br>
@@ -346,6 +343,10 @@ Licence URI: https://www.os-templates.com/template-terms
               FETTY WAP<br>
               GOO GOO DOLLS<br>
               KEANE<br>
+              ED SHEERAN<br>
+              YIRUMA<BR>
+              TOTO<br>
+
             </p>
           </div>
           <div class="two_third">
@@ -399,7 +400,6 @@ Licence URI: https://www.os-templates.com/template-terms
               No Surprise<br>
               Kiss from a Rose<br>
               Hoppipola<br>
-              I got rhythm<br>
               Moon River<br>
               Love changes everything<br>
               Lovely Day<br>
@@ -409,6 +409,10 @@ Licence URI: https://www.os-templates.com/template-terms
               Trap Queen<br>
               Iris<br>
               Somewhere Only We Know<br>
+              Perfect<br>
+              River Flows in You<br>
+              Africa<br>
+
             </p>
           </div>
         </div>
@@ -423,17 +427,23 @@ Licence URI: https://www.os-templates.com/template-terms
             <p style="font-size:12.5px;">
               A Thousand Years <br>
               Turning Page<br>
+              Dan and Shay<br>
               Main Theme<br>
               Tale as old as time<br>
               Main Theme<br>
               Medley<br>
+              City of Stars<br>
               Concerning Hobbits<br>
-              The Kiss / The Gael / <br>
-              Edelweiss <br>
+              The Kiss / The Gael /<br>
+              Edelweiss<br>
               The Throne Room <br>
-              The Wedding <br>
-              The Ludlows <br>
-              Main Theme <br>
+              The Wedding<br>
+              The Ludlows<br>
+              Storybook Love<br>
+              Memory<br>
+              I See the Light<br>
+              I got rhythm<br>
+              Main Theme<br>
               Theme<br>
               The greatest love of all<br>
               You light up my life<br>
@@ -446,16 +456,22 @@ Licence URI: https://www.os-templates.com/template-terms
             <p style="font-size:13px;">
               Twilight<br>
               Twilight<br>
+              The Ground Up<br>
               UP<br>
               Beauty & the Beast<br>
               Cinema Paradiso<br>
               Cinema Paradiso<br>
+              LaLa Land <br>
               Lord of the Rings<br>
               The Last Mohicans<br>
               Sound of Music<br>
               Star Wars<br>
               Legends of the Fall<br>
               Legends of the Fall<br>
+              The Princess Bride<br>
+              Cats<br>
+              Tangled<br>
+              An American in Paris<br>
               Rudy<br>
               Ice Castles<br>
               New York, New York<br>
@@ -469,17 +485,24 @@ Licence URI: https://www.os-templates.com/template-terms
             <p style="font-size:13px;">
               CHRISTINA PERRI<br>
               SLEEPING AT LAST<br>
+              <br>
               DISNEY<br>
               DISNEY<br>
               ENNIO MARRICONE<br>
               ENNIO MARRICONE<br>
+              JUSTIN HURWITZ<BR>
               HOWARD SHORE<br>
               DOUGIE MACLEAN<br>
               ANDRE RIEU<br>
               JOHN WILLIAMS<br>
               JAMES HORNER<br>
               JAMES HORNER<br>
+              WILLY DEVILLE<br>
+              ELAINE PAIGE<br>
+              MOORE & LEVI<br>
+              G. GERSHWIN<br>
               JARRY GOLDSMITH<br>
+
             </p>
           </div>
 
