added meta & picture change

--- a/pages/about_musicians.html
+++ b/pages/about_musicians.html
@@ -19,15 +19,20 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 
 <head>
-
 <title>Buffalo Strings | About the Musicians</title>
+<meta name="Description" content="High quality string music performances for weddings, parties, and special events in the Buffalo, NY and Western New York area">
+<meta name="KeyWords" content="string music, buffalo string quartet, wedding music, reception entertainment, violin music, buffalo musicians">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<META name="Copyright" content="Copyright 2012 Buffalo String Quartet">
+<META http-equiv="Content-Language" content="en">
+<META name="revisit-after" content="15 days">
+<META name="robots" content="index, follow">
+<META name="rating" content="General">
+<META name="robots" content="All">
 
 <meta charset="utf-8">
-
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
-
 </head>
 
 <body id="top">
@@ -178,10 +183,13 @@ Licence URI: https://www.os-templates.com/template-terms
 
       <p>Donna, viola and violin is a well-known soloist, chamber and orchestral musician and has performed concerts internationally on five continents as well as in the Western New York area. She is a graduate of the <a href="https://www.juilliard.edu/">Juilliard School of Music</a> with a Masters of Music and the <a href="https://www.esm.rochester.edu/">Eastman School of Music</a> with a Doctoral degree in music. She also has a Bachelor of Music Education. Donna is a versatile musician and enjoys performing and teaching a variety of styles and genres of music for many different audiences.<a href="https://www.os-templates.com/" title="Free Website Templates"></a><a href="https://www.os-templates.com/template-terms"><a href="https://www.os-templates.com/"></a></p><br>
 
+      <!-- <p> HeyHEY this is some text I need to comment!!!!</p> -->
+
       <img class="imgr borderedbox inspace-5" src="../images/demo/Quartet Nadia.jpg" alt="">
 
       <p>Nadia, violin, received her Master of Music in Europe. She was a top prize winner for the "Nedyalka Simeonova" Violin competition, and the "Golden Diana" Chamber Music competition. She was a soloist with the <a href="http://www.plovdivguide.com/">State Philharmonic Orchestra of Plovdiv</a>, and <a href="http://www.eriephil.org/">Erie Philharmonic</a>. Nadia also hold positions with the <a <a href="http://www.osesp.art.br/">Orquestra Sinfonica do Estado de São Paulo</a></a> Brazil, and the Philharmonic of the Nations, Germany (tour of Europe). Nadia currently resides in Buffaclo, NY, performs with the <a href="http://www.bpo.org">Buffalo Philharmonic Orchestra</a> and is an Artist in Residence at the St. Joseph's Collegiate Institute.</p>
 
+    
       <p><a href="#"></a></p><br>
 
       <img class="imgl borderedbox inspace-5" src="../images/demo/Quartet Greta.jpg" alt="">
