--- a/pages/quartet_repertoire.html
+++ b/pages/quartet_repertoire.html
@@ -10,6 +10,16 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
 <title>Buffalo Strings | Repertoire</title>
+<meta name="Description" content="High quality string music performances for weddings, parties, and special events in the Buffalo, NY and Western New York area">
+<meta name="KeyWords" content="string music, buffalo string quartet, wedding music, reception entertainment, violin music, buffalo musicians">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<META name="Copyright" content="Copyright 2012 Buffalo String Quartet">
+<META http-equiv="Content-Language" content="en">
+<META name="revisit-after" content="15 days">
+<META name="robots" content="index, follow">
+<META name="rating" content="General">
+<META name="robots" content="All">
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
@@ -259,8 +269,7 @@ Licence URI: https://www.os-templates.com/template-terms
               MOZART<br>
               TELEMANN<br>
               GRIEG<br>
-              BRAHMS<br>
-              MERLE J. ISAAC<br>
+              
             </p>
           </div>
           <div class="two_third">
@@ -291,11 +300,11 @@ Licence URI: https://www.os-templates.com/template-terms
               BEATLES<br>
               BEATLES<br>
               BEATLES<br>
-              BEATLES<br>
               COLDPLAY<br>
               COLDPLAY<br>
               COLDPLAY<br>
               COLDPLAY<br>
+              ALICIA KEYS<br>
               ALICIA KEYS<br>
               H. ARLEN<br>
               H. ARLEN<br>
@@ -308,7 +317,7 @@ Licence URI: https://www.os-templates.com/template-terms
               ELVIS PRESLEY<br>
               ENNIO MARRICONE<br>
               ERIC CLAPTON<br>
-              JACK JAHNSON<br>
+              GUNS N’ ROSES<br>
               JOHN LEGEND<br>
               JOURNEY<br>
               LEONARD COHEN<br>
@@ -330,10 +339,16 @@ Licence URI: https://www.os-templates.com/template-terms
               TALKIN HEADS<br>
               SHANIA TWAIN<br>
               OASIS<br>
+              The Magnetic Zeros<br>
+              RAY LAMONTAGNE<br>
+              BACKSTREET BOYS<br>
+              ED SHEERAN<br>
+              TOTO<br>
               ELBOW<br>
               RADIOHEAD<br>
               SEAL<br>
               SIGUR ROS<br>
+              STEVEN CHAPMAN<br>
               HANRY MANCINI<br>
               ANDREW WEBER<br>
               BILL HITHERS<br>
@@ -343,9 +358,9 @@ Licence URI: https://www.os-templates.com/template-terms
               FETTY WAP<br>
               GOO GOO DOLLS<br>
               KEANE<br>
-              ED SHEERAN<br>
-              YIRUMA<BR>
-              TOTO<br>
+              YIRUMA<br>
+              FRANK SINATRA<br>
+              
 
             </p>
           </div>
@@ -356,13 +371,13 @@ Licence URI: https://www.os-templates.com/template-terms
               Here Comes the Sun<br>
               Here, There and Everywhere<br>
               I Want to Hold Your Hand<br>
-              Good Day Sunshine<br>
               When I'm 64<br>
               Viva La Vida<br>
               Yellow<br>
               Clocks<br>
               A Sky Full of Stars<br>
               Empire State of Mind<br>
+              No One<br>
               Over the rainbow<br>
               Over the rainbow-Hawaiian version<br>
               Marry You<br>
@@ -374,7 +389,7 @@ Licence URI: https://www.os-templates.com/template-terms
               Can't stop falling in Love<br>
               Gabriel’s Oboe<br>
               Wonderful Tonight<br>
-              Angel<br>
+              Sweet Child O’ Mine<br>
               All of Me<br>
               Don't stop Believin<br>
               Hallelujah<br>
@@ -396,10 +411,16 @@ Licence URI: https://www.os-templates.com/template-terms
               This must be the place<br>
               You’re Still the One<br>
               Wonderwall<br>
+              Home<br>
+              You are the best Thing<br>
+              The Perfect Fan<br>
+              Perfect<br>
+              Africa<br>
               One Day Like This<br>
               No Surprise<br>
               Kiss from a Rose<br>
               Hoppipola<br>
+              I Will be Here<br>
               Moon River<br>
               Love changes everything<br>
               Lovely Day<br>
@@ -409,9 +430,8 @@ Licence URI: https://www.os-templates.com/template-terms
               Trap Queen<br>
               Iris<br>
               Somewhere Only We Know<br>
-              Perfect<br>
               River Flows in You<br>
-              Africa<br>
+              Way You Look Tonight<br>
 
             </p>
           </div>
@@ -427,27 +447,25 @@ Licence URI: https://www.os-templates.com/template-terms
             <p style="font-size:12.5px;">
               A Thousand Years <br>
               Turning Page<br>
-              Dan and Shay<br>
               Main Theme<br>
               Tale as old as time<br>
               Main Theme<br>
-              Medley<br>
               City of Stars<br>
               Concerning Hobbits<br>
               The Kiss / The Gael /<br>
-              Edelweiss<br>
-              The Throne Room <br>
               The Wedding<br>
               The Ludlows<br>
+              Edelweiss<br>
+              Main Theme<br>
               Storybook Love<br>
+              Dan and Shay<br>
+              New York, New York<br>
+              Main Theme<br>
+              I Got Rhythm<br>
+              Sunset Sunrise<br>
+              Waltz<br>
               Memory<br>
               I See the Light<br>
-              I got rhythm<br>
-              Main Theme<br>
-              Theme<br>
-              The greatest love of all<br>
-              You light up my life<br>
-              New York, New York<br>
             </p>
           </div>
 
@@ -456,27 +474,25 @@ Licence URI: https://www.os-templates.com/template-terms
             <p style="font-size:13px;">
               Twilight<br>
               Twilight<br>
-              The Ground Up<br>
               UP<br>
               Beauty & the Beast<br>
               Cinema Paradiso<br>
-              Cinema Paradiso<br>
-              LaLa Land <br>
-              Lord of the Rings<br>
+              LaLa Land<br>
+              Lord of the Rings<br> 
               The Last Mohicans<br>
+              Legends of the Fall<br>
+              Legends of the Fall<br>
               Sound of Music<br>
-              Star Wars<br>
-              Legends of the Fall<br>
-              Legends of the Fall<br>
+              Rudy<br> 
               The Princess Bride<br>
+              Ground Up<br>
+              New York, New York<br>
+              Ice Castles<br>
+              Crazy For You<br>
+              Fiddler on the Roof<br>
+              Sleeping Beauty<br>
               Cats<br>
               Tangled<br>
-              An American in Paris<br>
-              Rudy<br>
-              Ice Castles<br>
-              New York, New York<br>
-              New York, New York<br>
-              New York, New York<br>
             </p>
           </div>
 
@@ -484,25 +500,26 @@ Licence URI: https://www.os-templates.com/template-terms
             <p><b>Artist</b><p>
             <p style="font-size:13px;">
               CHRISTINA PERRI<br>
-              SLEEPING AT LAST<br>
-              <br>
+              CHRISTINA PERRI<br>
               DISNEY<br>
               DISNEY<br>
-              ENNIO MARRICONE<br>
               ENNIO MARRICONE<br>
               JUSTIN HURWITZ<BR>
               HOWARD SHORE<br>
               DOUGIE MACLEAN<br>
+              JAMES HORNER<br>
+              JAMES HORNER<br>
               ANDRE RIEU<br>
-              JOHN WILLIAMS<br>
-              JAMES HORNER<br>
-              JAMES HORNER<br>
-              WILLY DEVILLE<br>
-              ELAINE PAIGE<br>
-              MOORE & LEVI<br>
-              G. GERSHWIN<br>
               JARRY GOLDSMITH<br>
-
+              WILLY DE VILLE<br>
+              CHRIS DE STEFANO<br>
+              FRANK SINATRA<br>
+              MARVIN HAMLISCH<br>
+              GEORGE GERSHWIN<br>
+              SHELDON HARNICK<br>
+              TCHAIKOVSKY<br>
+              ANDREW WEBBER<br>              
+              MOORE & LEVI<br>
             </p>
           </div>
 
@@ -515,13 +532,13 @@ Licence URI: https://www.os-templates.com/template-terms
           <div class="two_third first">
             <p><b>Title of Piece</b><p>
             <p>
-              1. It's only a paper moon<br>
-              2. It had to be you<br>
-              3. Bye bye Blackbird<br>
-              4. Blue Moon<br>
-              5. Take five<br>
-              6. How High the moon<br>
-              7. A day in the Life of a fool<br>
+              It's only a paper moon<br>
+              It had to be you<br>
+              Bye bye Blackbird<br>
+              Blue Moon<br>
+              Take five<br>
+              How High the moon<br>
+              A day in the Life of a fool<br>
             </p>
           </div>
         </div>
@@ -551,13 +568,14 @@ Licence URI: https://www.os-templates.com/template-terms
           </div>
         </div>
       </div>
-
+      <!--
       <div id="section6">
         <h4>Catholic Mass songs with a singer</h4>
         <div class="group btmspace-50 demo repertoire-list">
           <div class="one_third first" 
             </p>
           </div>
+
           <div class="two_third">
             <p><b></b><p>
             <p>
@@ -576,6 +594,7 @@ Licence URI: https://www.os-templates.com/template-terms
           </div>
         </div>
       </div>
+    -->
       <!-- ################################################################################################ -->
     </div>
     <!-- ################################################################################################ -->
