--- a/pages/duo_repertoire.html
+++ b/pages/duo_repertoire.html
@@ -10,6 +10,16 @@ Licence URI: https://www.os-templates.com/template-terms
 <!-- To declare your language - read more here: https://www.w3.org/International/questions/qa-html-language-declarations -->
 <head>
 <title>Buffalo Strings | Repertoire</title>
+<meta name="Description" content="High quality string music performances for weddings, parties, and special events in the Buffalo, NY and Western New York area">
+<meta name="KeyWords" content="string music, buffalo string quartet, wedding music, reception entertainment, violin music, buffalo musicians">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<META name="Copyright" content="Copyright 2012 Buffalo String Quartet">
+<META http-equiv="Content-Language" content="en">
+<META name="revisit-after" content="15 days">
+<META name="robots" content="index, follow">
+<META name="rating" content="General">
+<META name="robots" content="All">
+
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
