remove second phone number & special characters

--- a/old_buffalo_strings_contact.htm
+++ b/old_buffalo_strings_contact.htm
@@ -255,7 +255,7 @@ Comments/Questions:<br>
 
 <!-- COPYRIGHT FOOTER -->
 <span class="footer">
-<script language="JavaScript" type="text/javascript" src="./old_buffalo_strings_contact_files/footer.js"></script><br><br>All contents ©&nbsp;Copyright 2019 <a href="http://buffalostrings.com/index.html">Buffalo Strings</a><br>
+<script language="JavaScript" type="text/javascript" src="./old_buffalo_strings_contact_files/footer.js"></script><br><br>All contents &nbsp;Copyright 2019 <a href="http://buffalostrings.com/index.html">Buffalo Strings</a><br>
 </span>
 <!-- COPYRIGHT FOOTER -->
 
