--- a/pages/about_musicians.html
+++ b/pages/about_musicians.html
@@ -71,13 +71,8 @@ Licence URI: https://www.os-templates.com/template-terms
 
         <ul class="nospace inline">
 
-          <li><strong>primary:</strong><br>
-
-            (716) 202-8749</li>
-
-          <li><strong>secondary:</strong><br>
-
-            (716) 400 6364</li>
+          <li><strong>contact:</strong><br>
+            (716) 202-8749</li>
 
         </ul>
 
@@ -237,7 +232,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
       <ul class="nospace btmspace-30 linklist contact">
 
-        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
+        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
 
       </ul>
 
