--- a/pages/common_repertoire.html
+++ b/pages/common_repertoire.html
@@ -42,10 +42,8 @@ Licence URI: https://www.os-templates.com/template-terms
       </div>
       <div id="quickinfo" class="fl_right">
         <ul class="nospace inline">
-          <li><strong>primary:</strong><br>
-            (716) 202-8749</li>
-          <li><strong>secondary:</strong><br>
-            (716) 400 6364</li>
+          <li><strong>contact:</strong><br>
+            (716) 202-8749</li>
         </ul>
       </div>
       <!-- ################################################################################################ -->
@@ -162,13 +160,13 @@ Licence URI: https://www.os-templates.com/template-terms
             <p><b>Title of Piece</b><p>
             <p>
               Cannon in D<br>
-              Jesu, Joy of Man’s Desiring<br>
+              Jesu, Joy of Man's Desiring<br>
               Water Music Suite / Hornpipe in F<br>
-              Salute D’Amour<br>
+              Salute D'Amour<br>
               Butterfly Waltz<br>
               Flower Duet from Lakme<br>
 
-              Trumpet Voluntary (“The Prince of Denmark")<br>
+              Trumpet Voluntary ("The Prince of Denmark")<br>
               Water Music Suite / Hornpipe in D<br>
               Royal Fireworks / La Rejouissance<br>
               Arrival of the Queen of Sheba<br>
@@ -180,7 +178,7 @@ Licence URI: https://www.os-templates.com/template-terms
               Rondeau<br>
               Trumpet Tune in D Major<br>
 
-              Waltz from “Sleeping Beauty”<br>
+              Waltz from "Sleeping Beauty"<br>
               The four seasons, Spring<br>
               Bridal Chorus<br>
               
@@ -224,7 +222,7 @@ Licence URI: https://www.os-templates.com/template-terms
               One Hand , One Heart<br>
               Clair de Lune<br>
               The Prayer<br>
-              Gabriel’s Oboe<br>
+              Gabriel's Oboe<br>
 
               Sheep May Safely Graze<br>
               Panis Angelicus<br>
@@ -414,7 +412,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <div class="one_third">
       <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
+        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
       </ul>
     </div>
     <div class="one_third">
