--- a/pages/duo_repertoire.html
+++ b/pages/duo_repertoire.html
@@ -42,10 +42,8 @@ Licence URI: https://www.os-templates.com/template-terms
       </div>
       <div id="quickinfo" class="fl_right">
         <ul class="nospace inline">
-          <li><strong>primary:</strong><br>
-            (716) 202-8749</li>
-          <li><strong>secondary:</strong><br>
-            (716) 400 6364</li>
+          <li><strong>contact:</strong><br>
+            (716) 202-8749</li>
         </ul>
       </div>
       <!-- ################################################################################################ -->
@@ -207,10 +205,10 @@ Licence URI: https://www.os-templates.com/template-terms
               Ode to Joy<br>
               Ave Maria<br>
               One Hand , One Heart<br>
-              Trumpet Voluntary (“The Prince of Denmark")<br>
+              Trumpet Voluntary ("The Prince of Denmark")<br>
               Clair de Lune<br>
               Flower Duet front he opera Lakme<br>
-              Salut d’amour (Loves greeting) op 12<br>
+              Salut d'amour (Loves greeting) op 12<br>
               Panis Angelicus<br>
               Water Music / Hornpipe in D<br>
               Water Music / Hornpipe in F<br>
@@ -237,7 +235,7 @@ Licence URI: https://www.os-templates.com/template-terms
               Ave Maria<br>
               Concerto Polon<br>
               Waltz from Sleeping Beauty<br>
-              ‘Waltz of the Flowers’ from the Nutcracker Suite<br>
+              ‘Waltz of the Flowers' from the Nutcracker Suite<br>
               The four seasons / Largo from the Winter<br>
               The four seasons / Spring<br>
               Bridal Chorus<br>
@@ -318,12 +316,12 @@ Licence URI: https://www.os-templates.com/template-terms
               A Sky Full of Stars<br>
               Heroes<br>
               The Prayer<br>
-              Gabriel’s Oboe<br>
-              Can’t stop falling in love<br>
+              Gabriel's Oboe<br>
+              Can't stop falling in love<br>
               Your song<br>
               Lippen Schweigen<br>
               Over the Rainbow<br>
-              Don’t stop believing<br>
+              Don't stop believing<br>
               Hallelujah<br>
               What a wonderful world<br>
               You and me<br>
@@ -333,7 +331,7 @@ Licence URI: https://www.os-templates.com/template-terms
               In Your Eyes<br>
               Today<br>
               Despacito<br>
-              I’ll Be<br>
+              I'll Be<br>
               Empire State of Mind<br>
               No One<br>
               LaLa Land medley<br>
@@ -385,7 +383,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <div class="one_third">
       <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
+        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
       </ul>
     </div>
     <div class="one_third">
