--- a/pages/quartet_repertoire.html
+++ b/pages/quartet_repertoire.html
@@ -42,10 +42,8 @@ Licence URI: https://www.os-templates.com/template-terms
       </div>
       <div id="quickinfo" class="fl_right">
         <ul class="nospace inline">
-          <li><strong>primary:</strong><br>
-            (716) 202-8749</li>
-          <li><strong>secondary:</strong><br>
-            (716) 400 6364</li>
+          <li><strong>contact:</strong><br>
+            (716) 202-8749</li>
         </ul>
       </div>
       <!-- ################################################################################################ -->
@@ -198,7 +196,7 @@ Licence URI: https://www.os-templates.com/template-terms
             <p>
               Air in G (D), from Orchestra Suite N3<br>
               Arioso<br>
-              Jesu, Joy of Man’s Desiring<br>
+              Jesu, Joy of Man's Desiring<br>
               Sheep May Safely Graze<br>
               Wachet auf (Sleepers Awake)<br>
               Ave Maria<br>
@@ -206,11 +204,11 @@ Licence URI: https://www.os-templates.com/template-terms
               One Hand , One Heart<br>
               Notturno from Quartet N 2<br>
               Prelude from "Te Deum"<br>
-              Trumpet Voluntary (“The Prince of Denmark"<br>
+              Trumpet Voluntary ("The Prince of Denmark")<br>
               Clair de Lune<br>
               Flower Duet front he opera Lakme<br>
               Serenade in E Major, Op 22<br>
-              Salute D’Amour<br>
+              Salute D'Amour<br>
               Panis Angelicus<br>
               Pavane<br>
               Berceuse<br>
@@ -236,12 +234,12 @@ Licence URI: https://www.os-templates.com/template-terms
               Rondeau<br>
               Cannon in D<br>
               Trumpet Tune in D Major<br>
-              Nessun Dorma from “Turandot”<br>
+              Nessun Dorma from "Turandot"<br>
               Gymnopedie N 1<br>
               Ave Maria<br>
               Dreaming (Scenes from Childhood album)<br>
               Andante Cantabile<br>
-              Waltz from “Sleeping Beauty”<br>
+              Waltz from "Sleeping Beauty"<br>
               Waltz of the Flowers from the "Nutcracker Suite"<br>
               Rhapsody on a Theme by Paganini<br>
               The four seasons, Largo from the Winter<br>
@@ -317,7 +315,7 @@ Licence URI: https://www.os-templates.com/template-terms
               ELVIS PRESLEY<br>
               ENNIO MARRICONE<br>
               ERIC CLAPTON<br>
-              GUNS N’ ROSES<br>
+              GUNS N' ROSES<br>
               JOHN LEGEND<br>
               JOURNEY<br>
               LEONARD COHEN<br>
@@ -387,9 +385,9 @@ Licence URI: https://www.os-templates.com/template-terms
               The Prayer<br>
               Your song<br>
               Can't stop falling in Love<br>
-              Gabriel’s Oboe<br>
+              Gabriel's Oboe<br>
               Wonderful Tonight<br>
-              Sweet Child O’ Mine<br>
+              Sweet Child O' Mine<br>
               All of Me<br>
               Don't stop Believin<br>
               Hallelujah<br>
@@ -409,7 +407,7 @@ Licence URI: https://www.os-templates.com/template-terms
               How Long Will I love You<br>
               Love me like you do<br>
               This must be the place<br>
-              You’re Still the One<br>
+              You're Still the One<br>
               Wonderwall<br>
               Home<br>
               You are the best Thing<br>
@@ -613,7 +611,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <div class="one_third">
       <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
+        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
       </ul>
     </div>
     <div class="one_third">
