--- a/pages/trio_repertoire.html
+++ b/pages/trio_repertoire.html
@@ -46,10 +46,8 @@ Licence URI: https://www.os-templates.com/template-terms
       </div>
       <div id="quickinfo" class="fl_right">
         <ul class="nospace inline">
-          <li><strong>primary:</strong><br>
-            (716) 202-8749</li>
-          <li><strong>secondary:</strong><br>
-            (716) 400 6364</li>
+          <li><strong>contact:</strong><br>
+            (716) 202-8749</li>
         </ul>
       </div>
       <!-- ################################################################################################ -->
@@ -196,18 +194,18 @@ Licence URI: https://www.os-templates.com/template-terms
             <p>
               Air in D (G), from Orchestra Suite N3<br>
               Sheep May Safely Graze<br>
-              Jesu, Joy of Man’s Desiring<br>
+              Jesu, Joy of Man's Desiring<br>
               Arioso<br>
               Wachet Auf (Sleepers Awake)<br>
               Ave Maria<br>
               Ode De Joy<br>
               One aHand, One Heart<br>
-              Trumpet Voluntary (“The Prince of Denmark’s March”)<br>
+              Trumpet Voluntary ("The Prince of Denmark's March")<br>
               Simple Gifts<br>
               Clair de Lune<br>
               Flower Duet front he opera Lakme<br>
-              Salute D’Amour<br>
-              Gabriel’s Oboe<br>
+              Salute D'Amour<br>
+              Gabriel's Oboe<br>
               Panis Angelicus<br>
               Water Music Suite / Hornpipe in D<br>
               Water Music Suite / Hornpipe in F<br>
@@ -221,7 +219,7 @@ Licence URI: https://www.os-templates.com/template-terms
               Royal Fireworks / La Rejouissance<br>
               Arrival of the Queen of Sheba<br>
               Jupiter (Theme from the Planets)<br>
-              Meditation, from “Thais”<br>
+              Meditation, from "Thais"<br>
               Wedding March<br>
               Alleluia<br>
               Ave Verum Corpus, K. 618<br>
@@ -231,8 +229,8 @@ Licence URI: https://www.os-templates.com/template-terms
               The Swan<br>
               Gymnopedie N 1<br>
               Ave Maria<br>
-              Waltz from “Sleeping Beauty”<br>
-              ‘Waltz of the Flowers’ from the Nutcracker Suite<br>
+              Waltz from "Sleeping Beauty"<br>
+              ‘Waltz of the Flowers' from the Nutcracker Suite<br>
               Rhapsody on a Theme by Paganini<br>
               The four seasons / Spring,<br>
               The four seasons / Largo from the Winter<br>
@@ -315,7 +313,7 @@ Licence URI: https://www.os-templates.com/template-terms
               ELVIS PRESLEY<br>
               ENNIO MARRICONE<br>
               ERIC CLAPTON<br>
-              GUNS N’ ROSES<br>
+              GUNS N' ROSES<br>
               JOHN LEGEND<br>
               JOURNEY<br>
               LEONARD COHEN<br>
@@ -383,9 +381,9 @@ Licence URI: https://www.os-templates.com/template-terms
               The Prayer<br>
               Your song<br>
               Can't stop falling in Love<br>
-              Gabriel’s Oboe<br>
+              Gabriel's Oboe<br>
               Wonderful Tonight<br>
-              Sweet Child O’ Mine<br>
+              Sweet Child O' Mine<br>
               All of Me<br>
               Don't stop Believin<br>
               Hallelujah<br>
@@ -405,7 +403,7 @@ Licence URI: https://www.os-templates.com/template-terms
               How Long Will I love You<br>
               Love me like you do<br>
               This must be the place<br>
-              You’re Still the One<br>
+              You're Still the One<br>
               Wonderwall<br>
               Home<br>
               You are the best Thing<br>
@@ -602,7 +600,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <div class="one_third">
       <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
+        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
       </ul>
     </div>
     <div class="one_third">
