--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@ Licence URI: https://www.os-templates.com/template-terms
       </div>
       <div id="quickinfo" class="fl_right">
         <ul class="nospace inline">
-          <li><strong>primary:</strong><br>
-            (716) 202-8749</li>
-          <li><strong>secondary:</strong><br>
-            (716) 400 6364</li>
+          <li><strong>contact:</strong><br>
+            (716) 202-8749</li>
         </ul>
       </div>
       <!-- ################################################################################################ -->
@@ -143,7 +141,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <div class="one_third">
       <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
+        <li><i class="fa fa-phone"></i> +1 (716) 202 8749</li>
       </ul>
     </div>
     <div class="one_third">
