--- a/pages/about_musicians.html
+++ b/pages/about_musicians.html
@@ -242,7 +242,7 @@ Licence URI: https://www.os-templates.com/template-terms
 
       <ul class="nospace btmspace-30 linklist contact">
 
-        <li><i class="fa fa-envelope-o"></i> <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;%69%6E%71%75%69%72%79%40%62%75%66%66%61%6C%6F%73%74%72%69%6E%67%73%2E%63%6F%6D?subject=Buffalo Strings Web Inquiry&body=Dear Buffalo Strings,%0D%0A%0D%0AI'm interested in your services for my event. Please forwards more information with regards to the details below.%0D%0A%0D%0ASincerely,%0D%0A[FULL NAME]%0D%0A[EVENT DATE]%0D%0A[EVENT DURATION]%0D%0A[EVENT LOCATION]"> &#105;&#110;&#113;&#117;&#105;&#114;&#121;&#64;&#98;&#117;&#102;&#102;&#97;&#108;&#111;&#115;&#116;&#114;&#105;&#110;&#103;&#115;&#46;&#99;&#111;&#109; </a>  </li>
+        <li><i class="fa fa-envelope-o"></i> <a href="mailto:nade@buffalostrings.com?subject=Buffalo Strings Web Inquiry&body=Dear Buffalo Strings,%0D%0A%0D%0AI'm interested in your services for my event. Please forwards more information with regards to the details below.%0D%0A%0D%0ASincerely,%0D%0A[FULL NAME]%0D%0A[EVENT DATE]%0D%0A[EVENT DURATION]%0D%0A[EVENT LOCATION]"> nade@buffalostrings.com </a>  </li>
 
       </ul>
 
