--- a/pages/trio_repertoire.html
+++ b/pages/trio_repertoire.html
@@ -605,7 +605,7 @@ Licence URI: https://www.os-templates.com/template-terms
     </div>
     <div class="one_third">
       <ul class="nospace btmspace-30 linklist contact">
-        <li><i class="fa fa-envelope-o"></i> <a href="mailto:nade@buffalostrings.com?subject=Buffalo Strings Web Inquiry&body=Dear Buffalo Strings,%0D%0A%0D%0AI'm interested in your services for my event. Please forwards more information with regards to the details below.%0D%0A%0D%0ASincerely,%0D%0A[FULL NAME]%0D%0A[EVENT DATE]%0D%0A[EVENT DURATION]%0D%0A[EVENT LOCATION]"> nade@buffalostrings.com </a>  </li>
+        <li><i class="fa fa-envelope-o"></i> <a href="https://buffalostrings.com/pages/contact.html"> CONTACT US </a>  </li>
       </ul>
     </div>
     <!-- ################################################################################################ -->
